WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104882
Crash in PlugInOriginHash with empty MIME type
https://bugs.webkit.org/show_bug.cgi?id=104882
Summary
Crash in PlugInOriginHash with empty MIME type
Jon Lee
Reported
2012-12-12 23:56:03 PST
A plug-in with no specified type will crash PlugInOriginHash.
Attachments
Patch
(6.38 KB, patch)
2012-12-13 00:18 PST
,
Jon Lee
fpizlo
: review+
webkit-ews
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2012-12-12 23:56:19 PST
<
rdar://problem/12872298
>
Jon Lee
Comment 2
2012-12-13 00:18:31 PST
Created
attachment 179217
[details]
Patch
Early Warning System Bot
Comment 3
2012-12-13 00:34:03 PST
Comment on
attachment 179217
[details]
Patch
Attachment 179217
[details]
did not pass qt-ews (qt): Output:
http://queues.webkit.org/results/15314160
Jon Lee
Comment 4
2012-12-13 00:43:50 PST
Committed
r137573
: <
http://trac.webkit.org/changeset/137573
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug